# haskell-smartcard

./: .gitignore  LICENSE  READE.rst  README.rst  Test.hs  pcsclite.cabal  smartcard.cabal
Internal/: PCSCLite.chs  WinSCard.chs
Lowlevel/: PCSCLite.chs  Reader.chs  WinSCard.chs
System/Smartcard/Lowlevel/: PCSCLite.chs  Reader.chs  WinSCard.chs
cbits/: to_attr.c
include/: .pcsclite_patched.h.swp  .winscard.h.swp  .wintypes.h.swp  pcsclite_patched.h  to_attr.h  winscard.h
