Name:                smartcard
Version:             0.1.2

Synopsis:            Haskell bindings for libpcsclite.
Description:         This package is supposed to bundle all kind of stuff, that's useful when communicating with rfid tags and smartcards.
Homepage:            http://github.com/mfischer/haskell-smartcard
License:             BSD3
License-file:        LICENSE
Author:              Moritz Fischer
Maintainer:          hackage@pure-entropy.org
Category:            Driver
Build-type:          Simple

Cabal-version:       >=1.6
extra-source-files:  include/*.h

Source-repository head
  Type:              git
  Location:          git@github.com:mfischer/haskell-smartcard.git

Library
  Exposed-modules:   System.Smartcard.Lowlevel.WinSCard,
                     System.Smartcard.Lowlevel.PCSCLite,
                     System.Smartcard.Lowlevel.Reader
  Build-depends:     base >= 3 && <= 4.3.1.0, MissingH, bytestring
  -- Other-modules:
  Include-Dirs:      include
  Includes:          pcsclite_patched.h winscard.h reader.h
  Build-tools:       c2hs        
  Extra-Libraries:   pcsclite
  
Executable test
  Main-Is:           Test.hs
  Include-Dirs:      include
  Includes:          pcsclite_patched.h winscard.h
  Extra-Libraries:   pcsclite
  Build-depends:     base
  Other-modules:     System.Smartcard.Lowlevel.WinSCard,
                     System.Smartcard.Lowlevel.PCSCLite,
                     System.Smartcard.Lowlevel.Reader
  C-Sources:         cbits/to_attr.c
